fixes wierd post content z-index issue on mobile.

--- a/css/pages/_blog.scss
+++ b/css/pages/_blog.scss
@@ -89,12 +89,18 @@
    .post-hero {
       position: fixed;
       @extend .wrapper;
+      z-index: 0;
    }
 
    .post-hero-spacer {
       width: 100%;
       height: 82vh;
       display: block;
+   }
+
+   .belowHero {
+      position: relative;
+      z-index: 98;
    }
 
    .header-wrapper {
