--- a/css/site.css
+++ b/css/site.css
@@ -2096,11 +2096,15 @@ input:focus {
   overflow: hidden; }
 
 .single .post-hero {
-  position: fixed; }
+  position: fixed;
+  z-index: 0; }
 .single .post-hero-spacer {
   width: 100%;
   height: 82vh;
   display: block; }
+.single .belowHero {
+  position: relative;
+  z-index: 98; }
 .single .header-wrapper {
   z-index: 1; }
 .single .post-header-wrapper {
